apps/helloapp/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloapp
  labels:
    app: helloapp
spec:
  selector:
    app: helloapp
  ports:
    - name: http
      port: 80
      targetPort: 5000
  type: ClusterIP
